--- a/api/vercel.json
+++ b/api/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
+            "dest": "./server/server.js",
             "headers": {
                 "Access-Control-Allow-Origin": "*"
               },
