--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "author": "",
   "license": "",
-  "main": "./server/server.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
@@ -19,9 +19,8 @@
     "yamljs": "^0.3.0"
   },
   "scripts": {
-    "dev:server": "nodemon ./server/server.js",
-    "populate-db": "node ./server/scripts/populateDatabase.js",
-    "server": "node ./server/server.js"
+    "dev:server": "nodemon index.js",
+    "server": "node index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
